syntax = "proto3";
import "error.proto";
import "consts.proto";
package proto;
option go_package = "/proto";

// gate服务

message Ping {
}

message Pong {
  int64 ts = 1;
}

message LoginToGame {
  int64 userId = 1;
}

message Profile {
  string name = 1;
  int32 coin = 2;
  int64 userId = 3;
  int32 teamId = 4;
  int64 updatedAt = 10;
}
message LoginToGameResp {
  ErrorCode code = 1;
  Profile player = 2;
  repeated Room roomList = 3;
  string roomId = 4;
  string tableId = 5;
}

message RegisterGameReq {
  string name = 1;
  string accountId = 2;
}

message Room {
  string roomId = 1;
  int32 pvp = 2;
  string name = 3;
  int32 minCoin = 4;
}

message GetRoomListResp {
  ErrorCode code = 1;
  repeated Room roomList = 2;
}

//
// game服务
message Join {
  string roomId = 1;
}

message JoinResp {
  ErrorCode code = 1;
}

message Cancel {
}

message CancelResp {
  ErrorCode code = 1;
}

message Ready {
}

message ReadyResp {
  ErrorCode code = 1;
}

message LeaveResp {
  ErrorCode code = 1;
}

//
// 在每一个步骤，下发游戏状态
message GameStateResp {
  ErrorCode code = 1;
  string errMsg = 2;
  GameState state = 3;
  TableInfo tableInfo = 5;
  repeated Room roomList = 6;
}

// TwoArray 二维数组[1:[0,0],2:[0,0]]
message Array {
  repeated uint32 v = 1;
  int32 i = 2;
}

//Pos 坐标
message Pos {
  uint32 x = 1;
  uint32 y = 2;
}

//
// 玩家数据
message Player {
  repeated Array matrix = 1;
  Pos pos = 2;
  uint32 score = 3;
}

//
// 区域数据
message Arena {
  repeated Array matrix = 1;
}

message State {
  Arena arena = 1;
  Player player = 2;
}

//
// UpdateState 玩家上传数据，包括arena数据和player数据
message UpdateState {
  //
  // arena|player
  string fragment = 1;
  //
  // pos|matrix|score
  Player player = 2;
  //
  // arena
  Arena arena = 3;
  //
  //
  int64 playerId = 4;
  bool end = 10;
}

//
// 下发桌子信息
message TableInfo {
  message Player {
    int32 teamId = 1;
    State state = 2;
    bool end = 3;
    int32 score = 4;
    Profile profile = 5;
  }

  message Waiter {
    map<int64, int64> readys = 4;
    int32 countDown = 6;
  }

  map<int64, Player>  players = 1;
  string tableId = 2;
  TableState tableState = 3;
  map<int32, int64>loseTeams = 5;
  Waiter waiter = 6;
  int32 countDown = 7;
}