syntax = "proto3";
package proto;
option go_package = "/proto";

// 该结构与consts结构一样，客户端服务器共用，只要定义就不能改变
enum AccountType {
  DEVICEID = 0;
  WX = 1;
  FB = 2;
  GIT = 3;
}

// 暂时这样，以后拆出来，游戏内状态和游戏外状态
enum GameState {
  IDLE = 0;
  WAIT = 1;
  WAITREADY = 2;
  CANCEL = 3;
  COUNTDOWN = 4;
  GAMING = 5;
  SETTLEMENT = 6;
}

enum GameSubState {
  SUBSTATE_NONE = 0;
  WAITREADY_PROFILE = 1;
  WAITREADY_COUNTDOWN = 2;
  WAITREADY_READYLIST = 3;
  COUNTDOWN_BEGIN = 4;
  GAME_BEGIN = 5;
  GAME_LOSE = 6;
  SETTLEMENT_BEGIN = 7;
  SETTLEMENT_END = 8;
}

enum RoomType {
  ROOMTYPE_NONE = 0;
  QUICK = 1;
  MATCH = 2;
}

enum TableType {
  TABLETYPE_NONE =0;
  NORMAL = 1;
  HAPPY = 2;
}